assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.landing-wrapper {
    height: 100vh;
    background: url('../img/fruits-on-table.jpg') no-repeat center center fixed;
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
}

.landing-wrapper::before{
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 1;
}

/*Text*/
.landing-box{
    text-align: center;
    color: white;
    padding: 40px 60px;
}

.landing-box h1{
    margin-bottom: 25px;
    font-size: 4em;
}

.landing-box .btn{
    background-color: #ffc107;
    border-radius: 20px;
    padding: 10px 15px;
    text-decoration: none;
    color: white;
    font-weight: bold;
    font-size: 1rem;
    transition: all 0.3s ease;
}

.landing-box .btn:hover {
    background-color: #e0a800;
    transform: scale(1.05);
    color: #fff;
}

